# LegoUkraineBot

./: CODEOWNERS  main.py  pyproject.toml
src/: __main__.py
src/bot/: bot_base.py  command_handler.py
